--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,17 @@
     "require": {
         "slim/slim": "^3.0",
         "php-di/php-di": "^6.0",
-        "php-di/slim-bridge": "^2.0"
+        "php-di/slim-bridge": "^2.0",
+        "robmorgan/phinx": "^0.10.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "Pool\\": "app/src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\Pool\\": "tests/"
+        }
     }
 }
